--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@google/genai": "^1.38.0",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
@@ -25,6 +26,7 @@
     "lucide-react": "^0.563.0",
     "mammoth": "^1.11.0",
     "next": "16.1.4",
+    "next-themes": "^0.4.6",
     "pdf-parse": "^2.4.5",
     "pino": "^10.3.0",
     "react": "19.2.3",
